--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <td class="ai"><a href="ai.html" target="_blank">AI</a></td>
             <td colspan="3" class="lab">RP LAB</td>
             <td colspan="2" class="cn"><a href="cn.html" target="_blank">CN</a></td>
-            <td class="iot"><a href="https://onlinecourses.nptel.ac.in/noc24_cs115/course">IIOT</a></td>
+            <td class="iot"><a href="https://onlinecourses.nptel.ac.in/noc24_cs115/course" target="_blank">IIOT</a></td>
         </tr>
         <tr>
             <th class="day">THURSDAY</th>
@@ -122,7 +122,7 @@
             <th class="day">FRIDAY</th>
             <td class="ai"><a href="ai.html" target="_blank">AI</a></td>
             <td class="dwm"><a class="data" href="data.html" target="_blank">DWDM</a></td>
-            <td colspan="2" class="iot"><a href="https://onlinecourses.nptel.ac.in/noc24_cs115/course">IIOT</a></td>
+            <td colspan="2" class="iot"><a href="https://onlinecourses.nptel.ac.in/noc24_cs115/course" target="_blank">IIOT</a></td>
             <td colspan="2" class="cloud"><a href="cloud.html" target="_blank">CC</a></td>
             <td class="cn"><a href="cn.html" target="_blank">CN</a></td>
             <td colspan="2" rowspan="2" class="teechar"> <b>Year Coordinator:</b> <br> Ms. M. Shamila <br> <b>Class Coordinator:</b> <br> Ms. S. Rajini Parimala </td>
@@ -132,7 +132,7 @@
             <td class="cloud"><a href="cloud.html" target="_blank">CC</a></td>
             <td colspan="3" class="lab">DWDM LAB</td>
             <td class="cn"><a href="cn.html" target="_blank">CN</a></td>
-            <td class="iot"><a href="https://onlinecourses.nptel.ac.in/noc24_cs115/course">IIOT</a></td>
+            <td class="iot"><a href="https://onlinecourses.nptel.ac.in/noc24_cs115/course" target="_blank">IIOT</a></td>
             <td class="dwm"><a class="data" href="data.html" target="_blank">DWDM</a></td>
         </tr>
     </table>
